syntax = "proto3";
package openim.sdk.group;

import "common.proto";
import "shared.proto";

option csharp_namespace = "OpenIM.Proto";
option go_package = "github.com/openimsdk/openim-sdk-core/v3/proto/go/group";
option swift_prefix = "";

message CreateGroupReq {
  // @opt @group_id
  optional string groupID = 1;
  // @group_name
  string groupName = 2;
  // @opt @group_notification
  optional string notification = 3;
  // @opt @group_introduction
  optional string introduction = 4;
  // @opt @group_face_url
  optional string faceURL = 5;
  // @opt @group_ex
  optional string ex = 6;
  // @opt @group_need_verification
  optional shared.GroupNeedVerification needVerification = 7;
  // @opt @group_look_member_info
  optional shared.GroupLookMemberInfo lookMemberInfo = 8;
  // @opt @group_apply_member_friend
  optional shared.GroupApplyMemberFriend applyMemberFriend = 9;
  // @opt @group_notification_update_time
  optional int64 notificationUpdateTime = 10;
  // @opt @group_notification_user_id
  optional string notificationUserID = 11;
  // @opt @group_attached_info
  optional string attachedInfo = 12;
  // @opt list of users invited as administrators
  repeated string adminUserIDs = 13;
  // @opt list of invited group members
  repeated string memberUserIDs = 14;
}
message CreateGroupResp {
  // Basic group chat information
  shared.IMGroup groupInfo = 1;
}

message JoinGroupReq {
  // want to join group id
  string groupID = 1;
  // request message
  string reqMsg = 2;
  // join source
  shared.GroupJoinSource joinSource = 3;
  // extension field
  string ex = 4;
}
message JoinGroupResp {}

message QuitGroupReq {
  // want to quit group id
  string groupID = 1;
}
message QuitGroupResp {}

message DismissGroupReq {
  // want to dismiss group id
  string groupID = 1;
}
message DismissGroupResp {}

message ChangeGroupMuteReq {
  // want to mute group id
  string groupID = 1;
  // mute or cancel mute
  bool mute = 2;
}
message ChangeGroupMuteResp {}

message ChangeGroupMemberMuteReq {
  // want to mute group id
  string groupID = 1;
  // @group_member_user_id
  string userID = 2; // user id you want to mute
  uint32 mutedSeconds = 3; // mute time (unit: seconds), 0 cancels the mute
}
message ChangeGroupMemberMuteResp {}

message TransferGroupOwnerReq {
  string groupID = 1; // group id you want to transfer
  string ownerUserID = 2; // new owner user id
}
message TransferGroupOwnerResp {}

message KickGroupMemberReq {
  string groupID = 1; // group id you want to kick
  repeated string kickedUserIDs = 2; // user id you want to kick
  string reason = 3; // kick reason
}
message KickGroupMemberResp {}

message SetGroupInfoReq {
  // @group_id
  string groupID = 1;
  // @opt @group_name
  optional string groupName = 2;
  // @opt @group_notification
  optional string notification = 3;
  // @opt @group_introduction
  optional string introduction = 4;
  // @opt @group_face_url
  optional string faceURL = 5;
  // @opt @group_ex
  optional string ex = 6;
  // @opt @group_need_verification
  optional shared.GroupNeedVerification needVerification = 7;
  // @opt @group_look_member_info
  optional shared.GroupLookMemberInfo lookMemberInfo = 8;
  // @opt @group_apply_member_friend
  optional shared.GroupApplyMemberFriend applyMemberFriend = 9;
}
message SetGroupInfoResp {}

message SetGroupMemberInfoReq {
  string groupID = 1; // group id you want to set
  // @opt @group_user_id
  string userID = 2;
  optional string nickname = 3; // user nickname
  optional string faceURL = 4; // user face url
  optional common.GroupMemberRoleLevel roleLevel = 5; // user role level
  optional string ex = 6; // extension field
}
message SetGroupMemberInfoResp {}

message GetJoinedGroupsReq {}
message GetJoinedGroupsResp {
  repeated shared.IMGroup groups = 1; // group information
}

message GetJoinedGroupsPageReq {
  openim.sdk.common.RequestPagination pagination = 2; // pagination
}
message GetJoinedGroupsPageResp {
  repeated shared.IMGroup groups = 1; // group information
}

message GetSpecifiedGroupsInfoReq {
  repeated string groupIDs = 1; // group id you want to get
}
message GetSpecifiedGroupsInfoResp {
  repeated shared.IMGroup groups = 1; // group information
}

message SearchGroupsReq {
  string keyword = 1; // search keyword
  bool searchGroupID = 2; // search group id
  bool searchGroupName = 3; // search group name
}
message SearchGroupsResp {
  repeated shared.IMGroup groups = 1; // group information
}

message GetGroupMemberOwnerAndAdminReq {
  string groupID = 1; // group id you want to get
}
message GetGroupMemberOwnerAndAdminResp {
  repeated shared.IMGroupMember members = 1; // group member information
}

message GetGroupMembersByJoinTimeFilterReq {
  string groupID = 1; // group id you want to get
  int64 joinTimeBegin = 2; // join time start
  int64 joinTimeEnd = 3; // join time end
  openim.sdk.common.RequestPagination pagination = 4; // pagination
}
message GetGroupMembersByJoinTimeFilterResp {
  repeated shared.IMGroupMember members = 1; // group member information
}

message GetSpecifiedGroupMembersInfoReq {
  string groupID = 1; // group id you want to get
  repeated string userIDs = 2; // user id you want to get
}
message GetSpecifiedGroupMembersInfoResp {
  repeated shared.IMGroupMember members = 1; // group member information
}

enum GroupMemberFilter {
  All = 0; // all users
  Owner = 1; // owner users
  Admin = 2; // admin users
  OrdinaryUsers = 3; // ordinary users
  AdminAndOrdinaryUsers = 4; // admin and ordinary users
  OwnerAndAdmin = 5; // owner and admin users
}
message GetGroupMembersReq {
  // group id you want to get
  string groupID = 1;
  // filter
  GroupMemberFilter filter = 2;
  // @common_request_pagination
  openim.sdk.common.RequestPagination pagination = 4;
}
message GetGroupMembersResp {
  // @shared_imgroup_members
  repeated shared.IMGroupMember members = 1;
}

message GetGroupApplicationReq {
  // is it the request i sent
  bool send = 1;
}
message GetGroupApplicationResp {
  // @shared_imgroup_applications
  repeated shared.IMGroupApplication applications = 1;
}

message SearchGroupMembersReq {
  // group id you want to search
  string groupID = 1;
  // search keyword
  string keyword = 2;
  // search user id
  bool searchUserID = 3;
  // search user nickname
  bool searchMemberNickname = 4;
  // @common_request_pagination
  openim.sdk.common.RequestPagination pagination = 5;
}
message SearchGroupMembersResp {
  // @shared_imgroup_members
  repeated shared.IMGroupMember members = 1;
}

message IsJoinGroupReq {
  // group id you want to check
  string groupID = 1;
  // user id you want to check
  string userID = 2;
}
message IsJoinGroupResp {
  // whether to join the group
  bool joined = 1;
}

message GetUsersInGroupReq {
  // group id you want to get
  string groupID = 1;
  // user id you want to get
  repeated string userIDs = 2;
}
message GetUsersInGroupResp {
  // user id in the group
  repeated string userIDs = 1;
}

message InviteUserToGroupReq {
  // group id you want to invite
  string groupID = 1;
  // user id you want to invite
  repeated string userIDs = 2;
  // invite reason
  string reason = 3;
}
message InviteUserToGroupResp {}

message HandleGroupApplicationReq {
  // @group_id
  string groupID = 1;
  // user id you want to handle
  string fromUserID = 2;
  // request message
  string handledMsg = 3;
  // approval status
  openim.sdk.common.ApprovalStatus status = 4;
}
message HandleGroupApplicationResp {}

service GroupService {
  /**
   * The group creator assigns roles and adds members
   * 1. The creator establishes a group as the group owner, specifying group administrators and ordinary group members. Once successful, all roles immediately join the group.
   * 2. It's recommended that the number of group members does not exceed 1000 at a time, as larger numbers may result in data packets being rejected by the backend due to their size.
   * Notice:
   * If a groupID is specified, it cannot be duplicated.
   * If no groupID is specified, the server will generate a unique groupID.
   * Related callbacks:
   * `onJoinedGroupAdded`
   * `onGroupMemberAdded`
   */
  rpc CreateGroup(CreateGroupReq) returns (CreateGroupResp);
  /**
   * Apply to join a group
   * Notice:
   * Apply to join the group. If you are allowed to join directly, you can directly enter the group chat. Otherwise, send a request to join the group, which requires the approval of the group administrator or group owner.
   * Related callbacks:
   * `onJoinedGroupAdded`
   * `onGroupMemberAdded`
   * `onGroupApplicationAdded`
   */
  rpc JoinGroup(JoinGroupReq) returns (JoinGroupResp);
  /**
   * Leave the group
   * Notice:
   * Administrators and ordinary members can log out directly, but group owners cannot log out.
   * Related callbacks:
   * `onJoinedGroupDeleted`
   * `onGroupMemberDeleted`
   */
  rpc QuitGroup(QuitGroupReq) returns (QuitGroupResp);
  /**
   * Disband the group
   * Notice:
   * The group status field will be set to "disbanded" in the background.
   * When group members fetch the list of groups they've joined, this group will no longer be returned.
   * Related callbacks:
   * `onGroupDismissed`
   */
  rpc DismissGroup(DismissGroupReq) returns (DismissGroupResp);
  /**
   * The group owner or group admin changes the mute status of the group.
   * Notice:
   * After being muted, regular members cannot send messages, but the group owner and admins can continue to send messages.
   * Related callbacks:
   * `onGroupInfoChanged`
   */
  rpc ChangeGroupMute(ChangeGroupMuteReq) returns (ChangeGroupMuteResp);
  /**
   * The group owner or group administrators can change the mute status of group members.
   * Notice:
   * A group owner can mute both administrators and regular members, while an administrator can only mute regular members.
   * Related callbacks:
   * `onGroupApplicationAccepted`
   */
  rpc ChangeGroupMemberMute(ChangeGroupMemberMuteReq) returns (ChangeGroupMemberMuteResp);
  /**
   * Transfer the group owner status.
   * Notice:
   * Transfer group owner, can only be called by group owner.
   * Related callbacks:
   * `onGroupInfoChanged`
   * `onGroupMemberInfoChanged`
   */
  rpc TransferGroupOwner(TransferGroupOwnerReq) returns (TransferGroupOwnerResp);
  /**
   * Remove a member from a group.
   * Notice:
   * The group owner and group administrators can remove group members.
   * Related callbacks:
   * `onJoinedGroupDeleted`
   * `onGroupMemberDeleted`
   */
  rpc KickGroupMember(KickGroupMemberReq) returns (KickGroupMemberResp);
  /**
   * Set group information
   * Notice:
   * Set group information, including group avatar, name, announcement, introduction, extended fields, etc. Only administrators and group owners have permission to set.
   * Related callbacks:
   * `onGroupInfoChanged`
   */
  rpc SetGroupInfo(SetGroupInfoReq) returns (SetGroupInfoResp);
  /**
   * Set group information
   * Notice:
   * Set group information, including group avatar, name, announcement, introduction, extended fields, etc. Only administrators and group owners have permission to set.
   * Related callbacks:
   * `onGroupMemberInfoChanged`
   */
  rpc SetGroupMemberInfo(SetGroupMemberInfoReq) returns (SetGroupMemberInfoResp);
  /**
   * Fetch the list of groups you've joined.
   * Get joined group chat information.
   * Notice:
   * If joined group is dismessed, it will not be return the group.
   */
  rpc GetJoinedGroups(GetJoinedGroupsReq) returns (GetJoinedGroupsResp);
  /**
   * Split fetch the list of groups you've joined.
   * Get joined group chat information.
   * Notice:
   * count can not hugo. Else, the request time is too long.
   */
  rpc GetJoinedGroupsPage(GetJoinedGroupsPageReq) returns (GetJoinedGroupsPageResp);
  /**
   * Set group information
   * Set group information, including group avatar, name, announcement, introduction, extended fields, etc. Only administrators and group owners have permission to set.
   * Notice:
   * Recommend once to get up to 100.
   */
  rpc GetSpecifiedGroupsInfo(GetSpecifiedGroupsInfoReq) returns (GetSpecifiedGroupsInfoResp);
  /**
   * Search for joined groups using keyword
   * Notice:
   * Must have specific once search type.
   * Mulit search type is related in AND or OR.
   * The list of groups is recommended to have a maximum of 100 at a time.
   */
  rpc SearchGroups(SearchGroupsReq) returns (SearchGroupsResp);
  /**
   * Get specified group owner and admin.
   * Notice:
   * Caller must be joined the group can call this interface.
   */
  rpc GetGroupMemberOwnerAndAdmin(GetGroupMemberOwnerAndAdminReq) returns (GetGroupMemberOwnerAndAdminResp);
  /**
   * Get specified group member info. Support filter by join time.
   * Notice:
   * 1. Caller must be joined the group can call this interface.
   * 2. Recommend once to get up to 10000.
   */
  rpc GetGroupMembersByJoinTimeFilter(GetGroupMembersByJoinTimeFilterReq) returns (GetGroupMembersByJoinTimeFilterResp);
  /**
   * Get specified groups and corresponding group members info.
   * Notice:
   * 1. Caller must be joined the group can call this interface.
   * 2. Recommend once to get up to 10000.
   */
  rpc GetSpecifiedGroupMembersInfo(GetSpecifiedGroupMembersInfoReq) returns (GetSpecifiedGroupMembersInfoResp);
  /**
   * Get specified group member info.
   * Notice:
   * 1. Caller must be joined the group can call this interface.
   * 2. Recommend once to get up to 10000.
   */
  rpc GetGroupMembers(GetGroupMembersReq) returns (GetGroupMembersResp);
  /**
   * Group owner or group admin get group application, including request and invit.
   * Notice:
   * Get all group applications once.
   */
  rpc GetGroupRequest(GetGroupApplicationReq) returns (GetGroupApplicationResp);
  /**
   * Search specified group's group member using keyword
   * Notice:
   * Only group member have search permission.
   * Must have specific once search type.
   * Mulit search type is related in AND or OR.
   * The list of groups is recommended to have a maximum of 100 at a time.
   */
  rpc SearchGroupMembers(SearchGroupMembersReq) returns (SearchGroupMembersResp);
  /**
   * Check current user is join the group.
   */
  rpc IsJoinGroup(IsJoinGroupReq) returns (IsJoinGroupResp);
  /**
   * Check specified user is join the group.
   */
  rpc GetUsersInGroup(GetUsersInGroupReq) returns (GetUsersInGroupResp);
  /**
   * Invite user to group
   * Notice:
   * Determine the result of inviting a user to the group based on the caller's identity and the group entry verification options.
   * Related callbacks:
   * `onJoinedGroupAdded`
   * `onGroupMemberAdded`
   * `onGroupApplicationAdded`
   */
  rpc InviteUserToGroup(InviteUserToGroupReq) returns (InviteUserToGroupResp);
  /**
   * Group owner or group admin handle group application.
   * Notice:
   * Only group owner or group admin have permission call it.
   * If the application is handled, group owner and admin can not handle it again.
   * Related callbacks:
   * `onGroupApplicationAccepted`
   * `onGroupMemberAdded`
   * `onJoinedGroupAdded`
   *
   * `onGroupApplicationRejected`
   */
  rpc HandleGroupRequest(HandleGroupApplicationReq) returns (HandleGroupApplicationResp);
}
